tests/parser/expr_expected.expected
<string>:1:3: error: expected expression, not RParen
( )
  ^